rename in preparation for release and fix small bugs

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
   - pip install pytest-cov
 
 script:
-  - pytest --cov charlotte
+  - pytest --cov caroline
 
 after_success:
   - coverage xml
