--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,19 @@ version = "0.4.2"
 description = "A key/value-based JSON ODM with a memorable name."
 authors = ["Grafeas Group Ltd. <devs@grafeas.org>"]
 license = "MIT"
+classifiers = [
+    "Development Status :: 4 - Beta",
+    "Intended Audience :: Developers",
+    "License :: OSI Approved :: MIT License",
+    "Topic :: Database :: Front-Ends",
+    "Programming Language :: Python :: 3 :: Only",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+]
+readme = "README.md"
+homepage = "https://www.grafeas.org"
+repository = "https://github.com/grafeasgroup/caroline"
+keywords = ["redis", "elasticsearch", "odm"]
 
 [tool.poetry.dependencies]
 python = "^3.6"
