--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,9 @@ redis = "^2.10"
 jsonschema = "^2.6"
 elasticsearch = "^6.3"
 addict = "^2.2"
+codacy-coverage = {version = "^1.3",optional = true}
+pytest-cov = {version = "^2.6",optional = true}
+
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.10"
@@ -32,6 +35,9 @@ black = "^18.3-alpha.0"
 ipdb = "^0.11.0"
 pre-commit = "^1.12"
 flake8 = "^3.6"
+
+[tool.poetry.extras]
+ci = ["codacy-coverage", "pytest-cov"]
 
 [build-system]
 requires = ["poetry>=0.12"]
